--- a/Geospatial/Kangaroo_Hops_To_The_Coast.Rmd
+++ b/Geospatial/Kangaroo_Hops_To_The_Coast.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "How far would a Kangaroo hop from Uluru from the Sea?"
+title: "How far would a Kangaroo hop from Uluru to the Sea?"
 output: bookdown::html_document2
 fig_caption: yes
 ---
@@ -15,24 +15,24 @@ library(elevatr)
 ```
 
 ## Introduction {-#Introduction}
-In a previous post I looked at [how far Uluru is from the sea](http://rpubs.com/will-kent/uluru-to-the-sea). In that analysis it was found Uluru is `679.35`kilometres from the sea and that the closest point on the coast is on the South Australian coast at the head of the Great Australian Bight. That original calculation was based on the _"as the crow flies"_ distance which is great, if you're a crow, but doesn't help us land based mammals to determine the distance we'd have to travel to get to the coast from Uluru. This post will look at determining how far a kangaroo would have to hop from Uluru to the sea.
+In a previous post I looked at [how far Uluru is from the sea](http://rpubs.com/will-kent/uluru-to-the-sea). In that analysis it was found Uluru is 679.35 kilometres from the sea and that the closest point on the coast is on the South Australian coast at the head of the Great Australian Bight. That original calculation was based on the _"as the crow flies"_ distance which is great, if you're a crow, but doesn't help us land based mammals to determine the distance we'd have to travel to get to the coast from Uluru. This post will look at determining how far a kangaroo would have to hop from Uluru to the sea.
 
 ``` {r crowflying, echo=FALSE, out.width='100%', fig.align = "center", fig.cap = "\\label{fig:figs}A crow flies above the undulations of the earth's surface but a kangaroo would have to navigate these mountains and valleys."}
 knitr::include_graphics("./images/crow_flies.png")
 ```
 
 ## The Earth isn't round {-#the-earth-isnt-round}
-Bare with me, this isn't a flat earth conspiracy. The Earth is often referred to as an oblate spheroid; a sphere that is a little fatter around the middle. The Earth's equator rotates faster than the poles and bulges outward by about 21 kilometres. The term oblate spheroid still conjures up an image of a uniform surface throughout the entirety of the planet, but this isn't true. The earth is a rock and like most rocks it comes with an uneven surface; it rises and falls.
+Bear with me, this isn't a flat earth conspiracy. The Earth is often referred to as an oblate spheroid; a sphere that is a little fatter around the middle. The Earth's equator rotates faster than the poles and bulges outward by about 21 kilometres. The term oblate spheroid still conjures up an image of a uniform surface throughout the entirety of the planet, but this isn't true. The earth is a rock and like most rocks it comes with an uneven surface; it rises and falls.
 
 ``` {r earthsurface, echo=FALSE, out.width='100%', fig.cap = "\\label{fig:figs}The Earth is often imagined as an oblate spheroid but in reality it's a lumpy rock with an uneven surface."}
 knitr::include_graphics("./images/earth.png")
 ```
 
-The uneven surface of our planet creates obstacles that a land based animal needs to navigate in order to reach a destination; they can't fly above it all. How could we calculate the distance to be travelled by land?
+The uneven surface of our planet creates obstacles that a land-based animal needs to navigate in order to reach a destination; they can't fly above it all. How could we calculate the distance to be travelled by land?
 
 ## Calculating distance {-#calculating-distance}
 
-Before calculating the distance we'll set the starting location - Uluru - and the projection. A projection is the method by which a three dimensional coordinate system is displayed on a flat surface; in this case the widely used WGS84 projection for the project. The WGS84 projection is set using the `get_proj4` function from the `tamptools` package.
+Before calculating the distance, we'll set the starting location - Uluru - and the projection. A projection is the method by which a three-dimensional coordinate system is displayed on a flat surface; in this case the widely used WGS84 projection for the project. The WGS84 projection is set using the `get_proj4` function from the `tmaptools` package.
 
 ```{r vars, include = FALSE}
 location <- "Uluru"
@@ -64,10 +64,9 @@ loc_wkt <- readWKT(loc_txt, p4s = CRS(wgs.84))
 
 ### Elevation {-#elevation}
 
-With the location of Uluru on the Earth's surface known how high Uluru is above sea level can be calculating using the `get_elev_point` function from the `elevatr` package. The `elevatr` package provides access to several web services that provide elevation data. The web service used for this project is the [Amazon Web Service Terrain Tiles](https://registry.opendata.aws/terrain-tiles/) which provides a global dataset for bare-earth terrain heights. For Australia the elevation data is in a grid of either 5 metres for coastal regions or 90 metres for more remote regions.
+With the location of Uluru on the Earth's surface known how far above sea level Uluru is can be calculating using the `get_elev_point` function from the `elevatr` package. The `elevatr` package provides access to several web services that provide elevation data. The web service used for this project is the [Amazon Web Service Terrain Tiles](https://registry.opendata.aws/terrain-tiles/) which provides a global dataset for bare-earth terrain heights. For Australia the elevation data is in a grid of either 5 metres for coastal regions or 90 metres for more remote regions.
 
 ```{r uluruelevation, echo = TRUE, message = FALSE, warning = FALSE}
-# Check elevation of location of interest
 uluru_alt <- elevatr::get_elev_point(loc_wkt, src = "aws")
 ```
 
@@ -76,7 +75,7 @@ The `get_elev_point` function accepts a point and returns the elevation. For Ulu
 ### The coast {-#the-coast}
 As in the previous post coastline data can be obtained from the <http://www.naturalearthdata.com> website using the `readOGR` function from the `rgdal` package.
 
-```{r downloadfile}
+```{r downloadfile, echo = TRUE, message = FALSE, warning = FALSE}
 download.file("http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/physical/ne_10m_coastline.zip", 
               destfile = 'coastlines.zip')
 
@@ -86,32 +85,32 @@ unzip(zipfile = 'coastlines.zip',
 coast <- readOGR("ne-coastlines-10m/ne_10m_coastline.shp", p4s = wgs.84)
 ```
 
-```{r}
-# Turn Shape file to data.frame - I don't think is required
-# coast_df <- SpatialLinesDataFrame(coast,coast@data) 
-```
-
-### Crow Flies distance calculation {-#crow-flies-distance-calculation}
+### Crow flies distance {-#crow-flies-distance-calculation}
 As in the previous post the distance from Uluru to the coast can be calculated using the `dist2line` function in the `geosphere` package.
 
-```{r distcalc}
-# Find the minimum distance to the coast in metres, as well as the point on the coast closest
-# to the location of interest
+```{r distcalc, echo = TRUE, message = FALSE, warning = FALSE}
+# Find the minimum distance to the coast in metres, as well as the point on the coast closest to the location of interest
 dist_line <- dist2Line(loc_wkt, coast)
 closest_longitude <- dist_line[2]
 closest_latitude <- dist_line[3]
 ```
 
-Unsurprisingly the distance from Uluru to the sea is `r dist_line` kilometres, which is what was found previously.
+Unsurprisingly the distance from Uluru to the sea is `r round(dist_line[1]/1000,2)` kilometres, which is what was found previously. The other important output is the closest point on the coast to Uluru. Using the coordinates of Uluru, and the coordinates of the closest point on the coast, a SpatialLines object can be created to connect the two. This SpatialLines object will be important for calculating changes in elevation.
 
-
-#Turn the line between Uluru and the closest point on the coast into a SpatialLines object
+```{r createaline, echo = TRUE, message = FALSE, warning = FALSE}
+#Create a line between Uluru and the closest point on the coast and make a SpatialLines object
 x <- c(longitude, closest_longitude)
 y <- c(latitude, closest_latitude)
 xy <- cbind(x,y)
 
 sp_line <- SpatialLines(list(Lines(Line(xy), ID = "a")))
+```
 
+## Kangaroo Hops {-#kangaroo-hops}
+
+The `elevatr` package can calculate the elevation of a point. The line between Uluru and the coast is important as it can be broken up into many points. Using the `spsample` function from `sp` package the line between Uluru and the coast can be split into many points along the route. In the below code snippet 10,000 points along the line are taken. As the code sets the type to "regular" the points are evenly spaced. This means we have 10,000 points all ~`r round(dist_line[1]/10000, 2)` metres apart.
+
+```{r calcpoints, echo = TRUE, message = FALSE, warning = FALSE}
 pts_2_sample <- 10000
 
 # Break the line into n regular intervals and create a dataframe of these, adding the location
@@ -119,26 +118,26 @@ pts_2_sample <- 10000
 spdf <- spsample(x = sp_line, n = pts_2_sample, type = "regular") 
 points <- as.data.frame(spdf)
 points <- as.data.frame(rbind(xy[1,], points, xy[2,]))
+```
 
-# Get the distance between sample points
+The 10,000 points are stored in a data frame. This data frame can be passed to the `get_elev_points` function used previously to determine the elevation of each of the 10,000 points.
+
+```{r elevationcalc, echo = TRUE, message = FALSE, warning = FALSE}
+# Get distance between points
 dist_bw_pts <- dist_line[1] / (pts_2_sample + 1)
 
-# Plot on map with line from location of interest to the coast
-ggplot() +
-  geom_path(data = coast, aes(x = long, y = lat, group = group)) +
-  geom_point(data = data.frame(loc_wkt), aes(x = x, y = y), colour = "red") +
-  geom_path(data = points, aes(x = x, y = y), colour = "green") +
-  scale_x_continuous(limits = c(110, 155)) +
-  scale_y_continuous(limits = c(-45, -5)) +
-  coord_fixed()
-
-
 # Now get elevation of points, a SpatialPointsDataFrame is returned, turn that to a dataframe
-# and add distance, in kiLometres, from location of interest.
+# and add distance, in kilometres, from location of interest.
 elevations <- elevatr::get_elev_point(points, prj = wgs.84 ,src = "aws")
 elevations_df <- as.data.frame(elevations)
 elevations_df <- cbind(elevations_df, "distance" = (as.numeric(row.names(elevations_df)) - 1) * dist_bw_pts)
+```
 
+### Elevation Profile {-#elevation-profile}
+
+With the points and elevations in a data frame an elevation profile can be produced to look at the changes that occur along the path from Uluru to the coast. Although the profile looks like there are significant peaks along the journey the initial rise of 300 metres in elevation occurs over almost 100 kilometres - hardly significant. The drop from almost 900 metres to the sea level occurs over 500 kilometres. 
+
+```{r plotelevation, echo = TRUE, message = FALSE, warning = FALSE, fig.width = 10, fig.cap = "\\label{fig:figs}The profile elevation from Uluru to the coast"}
 # Now plot the elevation profile from location of interest to coast
 ggplot(elevations_df) +
   geom_line(aes(x = (distance/1000), y = elevation)) +
@@ -146,7 +145,25 @@ ggplot(elevations_df) +
   scale_y_continuous(name = "Elevation (m)") +
   ggtitle("Elevation Profile") +
   theme_bw()
+```
 
+### Distance Travelled {-#distance-travelled}
+
+To calculate the distance travelled we call on Pythagoras' theorem. The Pythagorean equation is:
+
+
+$a^2 + b^2 = c^2$
+
+
+The horizontal distance travelled and the change in elevation are both known which means we can calculate the hypotenuse (or $c$). The sum of the hypotenuse values for each of the 10,000 points will provide a reasonably good estimate of the distance a kangaroo at Uluru would have to travel to reach the sea.
+
+``` {r pythagoras, echo=FALSE, out.width='100%', fig.cap = "\\label{fig:figs}Using the Pythagorean equation the distance travelled by a kangaroo can be calculated by determined by using the horizontal distance travelled and the change of elevation"}
+knitr::include_graphics("./images/elevation_calc.png")
+```
+
+Note that because a change in elevation can be negative (i.e. a descent) the absolute elevation change is used in the calculation.
+
+```{r kangaroocalc, echo = TRUE, message = FALSE, warning = FALSE}
 # For each point calculate the absolute elevation distance from point a to point b
 first_elevation <- elevations_df[1,1]
 elevations_df <- cbind(elevations_df, "next_elevation" = c(first_elevation, head(elevations_df$elevation, -1)))
@@ -154,4 +171,10 @@ elevations_df <- cbind(elevations_df, "elevation_diff" = abs(elevations_df$eleva
 
 # a2 + b2 = c2
 distance <- sum(sqrt(dist_bw_pts^2 + elevations_df$elevation_diff^2))
-distance
+```
+
+The distance a kangaroo at Uluru would have to hop to reach the sea is `r round(distance/1000, 2)` kilometres. This is only `r round((distance) - dist_line[1], 2)` metres more than the crow would have to fly.
+
+## Conclusion {-#conclusion}
+
+The relatively flat interior of Australia is probably not the best example to use when calculating distance travelled over land rather than through the more commonly used as the crow flies calculation. None-the-less the method described here provides a template to calculate the distance travelled, accounting for undulations in the Earth's surface.
